2013-05-14

	* src/messageview.[ch]
	  src/mimeview.[ch]: refactored: moved MimeInfo and file path member
	  from MimeInfo to MessageView so that it can be used from TextView.

2013-05-14

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/textview.c: added an option to prefer HTML part in
	  multipart/alternative.

2013-05-14

	* libsylph/html.[ch]: supported <blockquote> tag.

2013-04-05

	* libsylph/procmsg.c: procmsg_print_message(): print all texts in
	  messages, not only the first one.

2013-04-05

	* src/printing.c: print all texts in messages, not only the first one.

2013-04-04

	* libsylph/procmsg.c:
	  procmsg_print_message()
	  procmsg_print_message_part()
	  procmsg_save_message_as_text(): win32: open output file as text mode.
	  convert MIME part strings to locale encoding if specified.

2013-04-04

	* src/messageview.c: messageview_save_as(): added the feature to save
	  message as plain text.

2013-04-03

	* libsylph/utils.[ch]
	  libsylph/procmsg.[ch]
	  src/filesel.[ch]
	  src/summaryview.c: added the feature to save message as plain text
	  (locale or UTF-8 encoding).

2013-03-29

	* version 3.4.0beta3

2013-03-29

	* src/quote_fmt_parse.y: insert current date with %d for a new message.

2013-03-29

	* src/summaryview.c: summary_junk(): select proper junk folder instead
	  of default one.

2013-03-28

	* src/quote_fmt_parse.y: prohibit warnings when target message does
	  not exist.

2013-03-28

	* src/compose.c: compose_template_apply(): enabled quotation of
	  messages on forwarding.

2013-03-28

	* src/compose.c: refactored compose_quote_fmt().

2013-03-26

	* libsylph/imap.c: properly escape folder/username/password which
	  include double-quote or backslash.

2013-03-13

	* libsylph/mh.c: mh_scan_tree_recursive(): fixed rebuilding of folder
	  tree which had been broken at 3.4.0beta1 (#103).

2013-02-15

	* procheader_scan_date_string(): optimized.

2013-02-15
