@@ -1,3 +1,7 @@
+2013-05-15
+
+	* src/printing.c: modified debug output.
+
 2013-05-14
 
 	* src/messageview.[ch]
